<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degradado"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/bordes_redondos"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/conectamovil"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/pfp"
            android:layout_width="91dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/baseline_add_a_photo_24" />

        <View
            android:layout_width="300dp"
            android:layout_height="1dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp" />

        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="14dp"
            android:hint="Ingrese su nombre" />

        <EditText
            android:id="@+id/txtApellido"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="14dp"
            android:hint="Ingrese su apellido" />

        <EditText
            android:id="@+id/txtUsuarioR"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="14dp"
            android:hint="@string/ingrese_usuario" />

        <EditText
            android:id="@+id/txtEmailR"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="14dp"
            android:hint="@string/ingrese_email" />

        <EditText
            android:id="@+id/txtContra"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="14dp"
            android:hint="@string/ingrese_contrase_a" />

        <EditText
            android:id="@+id/txtContraAgain"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="14dp"
            android:hint="@string/verifique_su_contrase_a" />

        <Button
            android:id="@+id/btnRegistro"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="14dp"
            android:backgroundTint="#2196F3"
            android:text="@string/registrarse" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ya_tienes_cuenta" />

            <TextView
                android:id="@+id/txtInicioSesion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:clickable="true"
                android:text="@string/inicia_sesi_n"
                android:textColor="@color/blue" />

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>