<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degradado"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/bordes_redondos"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/todo"
            android:src="@mipmap/ic_launcher_round" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="ConectaMovil" />

        <EditText
            android:id="@+id/txtUsuarioEmail"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:hint="@string/ingrese_usuario_o_email" />

        <EditText
            android:id="@+id/txtContrasena"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:hint="@string/ingrese_contrase_a" />

        <Button
            android:id="@+id/btnInicio"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:backgroundTint="#2196F3"
            android:text="Iniciar sesión" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="¿No tienes cuenta?" />

            <TextView
                android:id="@+id/txtRegistro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blue"
                android:text=" Registrate"
                android:clickable="true"/>

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>